--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,12 +12,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.4",
+    "@types/three": "^0.177.0",
     "@workspace/ui": "workspace:*",
+    "framer-motion": "^12.19.2",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,6 +30,8 @@
     "@types/react-dom": "^19",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
+    "raw-loader": "^4.0.2",
+    "tailwind-merge": "^3.0.1",
     "typescript": "^5.7.3"
   }
 }
